--- a/Alert-Me/src/app/home/home.component.html
+++ b/Alert-Me/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="fixed-top">
   <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-4">
-      <button type="button" class="btn btn-info ml-5 mr-5 mb-3">Home</button>
-      <button type="button" class="btn btn-danger ml-5 mr-5 mb-3">Visualization</button>
+      <button type="button" class="btn btn-info ml-5 mr-5 mb-3" (click)="goHome()">Home</button>
+      <button type="button" class="btn btn-danger ml-5 mr-5 mb-3" (click)="goToVisualizer()">Visualization</button>
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
