google maps location added

--- a/Alert-Me/src/app/home/walking-page/walking-page.component.html
+++ b/Alert-Me/src/app/home/walking-page/walking-page.component.html
@@ -15,6 +15,6 @@
   
   <button type="button" class="btn btn-danger ml-5 mb-3 mt-3" (click)="startWalking()">Start Walking!</button>
 
-  
+  <app-map></app-map>
 
 </div>
