--- a/Alert-Me/src/app/home/walking-page/map/map.component.html
+++ b/Alert-Me/src/app/home/walking-page/map/map.component.html
@@ -5,6 +5,6 @@
 </form>
 
 <span *ngIf="isWalking">
-  <h2 class="mt-5">Seconds left: {{timeLeft}}<i class="fas fa-hourglass-half"></i></h2>
+  <h2 class="mt-5">Time Left: {{minString}}:{{secString}} <i class="fas fa-hourglass-half"></i></h2>
 </span>
 
